frontend/tests/read_surface/snapshots/frames__read_surface__d55_operation_59x20.snap
---
source: tests/read_surface/mod.rs
expression: f
---










      terminal too small — needs 60x20, this is 59x20
