frontend/tests/read_surface/snapshots/frames__read_surface__d55_operation_60x24.snap
---
source: tests/read_surface/mod.rs
expression: f
---
 ◒ Operation ─────────────────────────────────────── v0.2.0
 ◒ OMARCHY  mac bootstrap
  Welcome  Journey  Machine  Status  Health  Logs  Plan ▍Op
┌ Operation ───────────────────────────────────────────────┐
│ ❯ Scope   journey                         This scope o…  │
│   State   unreadable                      What it reco…  │
│   Worker  unknown                         Whether a wo…  │
│   Effect  unknown                         What the ope…  │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│ rows 1–4 of 4 · generation 78b203ec6845                  │
└──────────────────────────────────────────────────────────┘
 ↑↓ move  / filter  r refresh  ? help   read-only · fixture
