frontend/tests/read_surface/snapshots/frames__read_surface__d55_operation_80x24.snap
---
source: tests/read_surface/mod.rs
expression: f
---
 ◒ Operation ─────────────────────────────────────────────────────────── v0.2.0
 ◒ OMARCHY  mac bootstrap
┌ Screens ─────┐┌ Operation ───────────────────────────────────────────────────┐
│  Welcome     ││ ❯ Scope   journey                            This scope ow…  │
│  Journey     ││   State   unreadable                         What it recor…  │
│  Machine     ││   Worker  unknown                            Whether a wor…  │
│  Status      ││   Effect  unknown                            What the oper…  │
│  Health      ││                                                              │
│  Logs        ││                                                              │
│  Plan        ││                                                              │
│▍ Op          ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││ rows 1–4 of 4 · generation 78b203ec6845                      │
└──────────────┘└──────────────────────────────────────────────────────────────┘
 ↑↓ move  / filter  r refresh  ? help   read-only · no system changes · fixture
