frontend/tests/read_surface/snapshots/frames__read_surface__read_dashboard_120x40.snap
---
source: tests/read_surface/mod.rs
assertion_line: 1051
expression: f
---
 ◒ Journey ───────────────────────────────────────────────────────────────────────────────────────────────────── v0.2.0
┌ omarchy mac bootstrap ───────────────────────────────────────────────────────────────────────────────────────────────┐
│                           ███   █   █   ███   ████    ████  █   █  █   █        /\      /\                           │
│                          █   █  ██ ██  █   █  █   █  █      █   █   █ █        /  \ /\ /  \                          │
│                          █   █  █ █ █  █████  ████   █      █████    █        /    V  V    \                         │
│                          █   █  █   █  █   █  █  █   █      █   █    █        .------------.                         │
│                           ███   █   █  █   █  █   █   ████  █   █    █        |            |                         │
│                                     M A C   B O O T S T R A P                /______________\                        │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Screens ─────────────┐┌ Journey ─────────────────────────────────────────────────────┐┌ This machine ────────────────┐
│  Welcome             ││ ·─────·─────·─────·─────·─────·─────·─────·─────·─────·      ││ Platform      macos          │
│▍ Journey             ││ survey      resolve     asahi       shared      verify       ││ Architecture  arm64          │
│  Machine             ││       profile     plan        omarchy     restore     done   ││ Model         MacBookPro18,1 │
│  Status              ││ No stage is derived yet: every station is later.             ││ Chip          Apple M1 Pro   │
│  Health              ││                                                              ││ Memory        17179869184    │
│  Logs                ││ ▍Where it stands                                             ││ macOS         14.6           │
│  Plan check          ││   Run ./omarchy-bootstrap to survey this Mac and plan        │└──────────────────────────────┘
│                      ││   storage.                                                   │
│                      ││                                                              │
│                      ││ ▍Facts                                                       │
│                      ││   Machine         MacBook Pro (16-inch, M1 Pro, 2021)        │
│                      ││   Asahi install   none                                       │
│                      ││   Safe Linux max  654 GB                                     │
│                      ││   Surveyed        not yet · recorded                         │
│                      ││   Plan            not yet · recorded                         │
│                      ││                                                              │
│                      ││ ▍Actions                                                     │
│                      ││   Nothing is available now.                                  │
│                      ││                                                              │
│                      ││                                                              │
│                      ││                                                              │
│                      ││                                                              │
│                      ││                                                              │
│                      ││                                                              │
│                      ││                                                              │
│                      ││                                                              │
│                      ││                                                              │
│                      ││                                                              │
└──────────────────────┘└──────────────────────────────────────────────────────────────┘
 ⏎ select  ↑↓ move  r refresh  L logs  ? help  q quit                           read-only · no system changes · fixture
