frontend/tests/read_surface/snapshots/frames__read_surface__read_dashboard_80x24.snap
---
source: tests/read_surface/mod.rs
assertion_line: 1051
expression: f
---
 ◒ Journey ───────────────────────────────────────────────────────────── v0.2.0
 ◒ OMARCHY  mac bootstrap
┌ Screens ─────┐┌ Journey ─────────────────────────────────────────────────────┐
│  Welcome     ││ ·─────·─────·─────·─────·─────·─────·─────·─────·─────·      │
│▍ Journey     ││ survey      resolve     asahi       shared      verify       │
│  Machine     ││       profile     plan        omarchy     restore     done   │
│  Status      ││ No stage is derived yet: every station is later.             │
│  Health      ││                                                              │
│  Logs        ││ ▍Where it stands                                             │
│  Plan        ││   Run ./omarchy-bootstrap to survey this Mac and plan        │
│              ││   storage.                                                   │
│              ││                                                              │
│              ││ ▍Facts                                                       │
│              ││   Machine         MacBook Pro (16-inch, M1 Pro, 2021)       ↓│
│              │└──────────────────────────────────────────────────────────────┘
│              │┌ This machine ────────────────────────────────────────────────┐
│              ││ Platform      macos                                          │
│              ││ Architecture  arm64                                          │
│              ││ Model         MacBookPro18,1                                 │
│              ││ Chip          Apple M1 Pro                                   │
│              ││ Memory        17179869184                                    │
│              ││ macOS         14.6                                           │
└──────────────┘└──────────────────────────────────────────────────────────────┘
 ⏎ select  ↑↓ move  r refresh  ? help   read-only · no system changes · fixture
