frontend/tests/read_surface/snapshots/frames__read_surface__read_health_60x24.snap
---
source: tests/read_surface/mod.rs
assertion_line: 1051
expression: f
---
 ◒ Health ────────────────────────────────────────── v0.2.0
 ◒ OMARCHY  mac bootstrap
  Welcome  Journey  Machine  Status ▍Health  Logs  Plan
┌ Health ──────────────────────────────────────────────────┐
│   Passed 10    Warnings 1    Failures 0                  │
│ ❯ ✓ pass   Apple Silicon     arm64                       │
│   ✓ pass   Supported model   MacBook Pro (16-inch, M1 …  │
│   · info   FileVault         on — the installer asks f…  │
│   ! warn   Backup confirmed  not yet; asked before the…  │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│ rows 1–4 of 4 · generation 2620e0230283                  │
└──────────────────────────────────────────────────────────┘
 ↑↓ move  / filter  r refresh  ? help   read-only · fixture
