frontend/tests/read_surface/snapshots/frames__read_surface__read_logs_60x20.snap
---
source: tests/read_surface/mod.rs
assertion_line: 1051
expression: f
---
 ◒ Logs ──────────────────────────────────────────── v0.2.0
  Welcome  Journey  Machine  Status  Health ▍Logs  Plan
┌ Logs ────────────────────────────────────────────────────┐
│ ▍Tool log    Diagnostics                                 │
│   State   /Users/alex/.local/state/omarchy-mac-bootstrap │
│   Logs    …/alex/.local/state/omarchy-mac-bootstrap/logs │
│   Source  omarchy-bootstrap-20261004.log                 │
│   Lines   3                                              │
│   the selected log's last lines, as `logs` shows them    │
│ ❯ info   [SURVEY]  reading the disk                      │
│   warn   [PLAN]    Linux below recommended               │
│                    not a log-shaped line                 │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│ rows 1–3 of 3 · generation 545e054a9742                  │
└──────────────────────────────────────────────────────────┘
 ↑↓ move  / filter  ? help              read-only · fixture
